<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#01407B" >

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/paso3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#F9FD02"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="horizontal" >
		
        <TextView
            android:id="@+id/Desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/desde"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/ResulIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:layout_toRightOf="@+id/Desde"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
        <TextView
            android:id="@+id/Hasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ResulFin"
            android:text="@string/hasta"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/ResulFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
	<LinearLayout
    	android:id="@+id/Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true"
       	android:layout_alignParentRight="true"
       	android:orientation="horizontal" 
       	android:background="#CCEEFF"
        android:layout_below="@+id/relativeLayout2">
        
    	<LinearLayout 
    	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
        android:orientation="vertical" >    	    
    	 <TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
		    android:text="@string/tarjeta"/>   
		 <TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
		    android:text="@string/universitario"/> 
    	</LinearLayout>
    	
    	<LinearLayout 
    	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
        android:orientation="vertical" >    	    
    	 <TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
		    android:text="@string/dia"/>   
		 <TextView 
		    android:id="@+id/DiaActual"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
		    android:text=""/> 
    	</LinearLayout>
    	
    	<LinearLayout 
    	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
        android:orientation="vertical" >    	    
    	 <TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
		    android:text="@string/hora"/>   
		 <TextView 
		    android:id="@+id/HoraActual"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
		    android:text=""/> 
    	</LinearLayout>
    	<LinearLayout 
    	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        android:orientation="vertical" >    	    
    	<ImageButton
		    android:id="@+id/imageButton1"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_gravity="center"
		    android:src="@android:drawable/ic_menu_manage" />
    	</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Options"
        android:orientation="vertical" >

		<ImageView
		    android:id="@+id/ImgFoto"
		    android:layout_width="319dp"
		    android:layout_height="225dp"
		    android:contentDescription="@string/imagen_ejemplo"
		    android:src="@drawable/mapa" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#CCEEFF" 
        android:layout_below="@+id/Map"
        
        android:orientation="horizontal" >
		<TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toLeftOf="@+id/precioViaje"
		    android:text="@string/precio"/>
		<TextView 
		    android:id="@+id/precioViaje"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
		    android:text="@string/hello_world"/>
	</RelativeLayout>
    
    <LinearLayout
        android:id="@+id/Abajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#CCEEFF" 
        android:layout_below="@+id/relativeLayout3"
        android:orientation="vertical" >
		<TextView 
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
		    android:text="@string/hello_world"/>
    </LinearLayout>

</RelativeLayout>